--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,64 @@
-<!DOCTYPE html>
+{% load staticfiles %}
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>MyWebScrapping</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+{#    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"#}
+{#      rel="stylesheet">#}
 </head>
 <body>
-    <h2>Yup! It is working.</h2>
+    <nav>
+    <div class="container nav-wrapper">
+      <a href="/" class="brand-logo left">Scrapping</a>
+      <ul id="nav-mobile" class="right">
+        <li><a href="/">This</a></li>
+        <li><a href="#">is</a></li>
+        <li><a href="#">Akshay</a></li>
+      </ul>
+    </div>
+  </nav>
+<div class="container">
+    <h1 style="text-align: center">What do you want to search.</h1>
+    <div class="row">
+        <div class="col s4">
+            <div class="center">
+                <i class="large material-icons" style="color: #EE6E73">flash_on</i>
+                <p>Web Scrapper</p>
+                <p class="light center">Scrap with beauiful GUI</p>
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="center">
+                <i class="large material-icons" style="color: orange">camera</i>
+                <p>Web Scrapper</p>
+                <p class="light center">Scrap with beauiful GUI</p>
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="center">
+                <i class="large material-icons" style="color: blue">filter_list</i>
+                <p>Price Filter</p>
+                <p class="light center">Built with Love <span style="color: red">❤</span></p>
+            </div>
+        </div>
+    </div>
+</div>
+    <div class="container">
+    <form action="{% url 'new_search' %}" method="post">
+            {% csrf_token %}
+            <input type="text" name="search" placeholder="Search">
+             <button class="btn waves-effect waves-light" type="submit" name="submit" value="submit">Submit
+                 <i class="material-icons right">send</i>
+             </button>
+    </form>
+    </div>
+    {% block content %}
+    {% endblock content %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
 </html>
