--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
+  font-display: auto;
   src: url(https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');
 }
 
@@ -20,4 +21,25 @@
   direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+}
+.card{
+  padding: 4px;
+  overflow: hidden;
+}
+.card-title{
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+}
+.card-action{
+  text-align: center;
+  padding: 1.5vh !important;
+  margin: 0;
+  overflow: hidden;
+}
+.card-image{
+  overflow: hidden;
+  height: fit-content;
+  object-fit:cover;
 }
